Fix overflowing in sandbox popup selector.

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -1072,6 +1072,7 @@ span.title,
     padding: 4px 0 4px 5px;
     font-size: 14px;
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 .sandboxes-content .sandbox-item.sandbox:hover {
